cluster/website/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: website
  name: website
  namespace: website
  annotations:
    keel.sh/policy: major
    keel.sh/trigger: poll
spec:
  replicas: 1
  selector:
    matchLabels:
      app: website
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
        - image: sgoudham/website:1.0.1
          imagePullPolicy: IfNotPresent
          name: website
          ports:
            - containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 3000
          resources: {}
      dnsPolicy: ClusterFirst
      restartPolicy: Always
